--- a/ms-productos/pom.xml
+++ b/ms-productos/pom.xml
@@ -130,8 +130,13 @@
 			<artifactId>logback-gelf</artifactId>
 			<version>6.0.1</version>
 		</dependency>
- 
-	</dependencies>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
 
 	<dependencyManagement>
 		<dependencies>
